unpackaged/main/default/objects/Contract/fields/Contract_Finish_Month__c.field-meta.xml
<CustomField>
    <fullName>Contract_Finish_Month__c</fullName>
    <formula>CASE(
MONTH(  EndDate  ) ,
1, "January",
2, "February",
3, "March",
4, "April",
5, "May",
6, "June",
7, "July",
8, "August",
9, "September",
10, "October",
11, "November",
12, "December",
"Invalid month")</formula>
    <label>Contract Finish Month</label>
    <type>Text</type>
</CustomField>