unpackaged/main/default/objects/Contract/fields/Credit_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Credit_Purchased__c</fullName>
    <label>Credit Purchased</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>