unpackaged/main/default/objects/Contract/fields/Days_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Days_Purchased__c</fullName>
    <label>Days Purchased</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>