unpackaged/main/default/objects/Contract/fields/Hours_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Hours_Purchased__c</fullName>
    <label>Hours Purchased</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>