unpackaged/main/default/objects/Contract/fields/Is30DaySchedule__c.field-meta.xml
<CustomField>
    <fullName>Is30DaySchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggers 30 Day Schedule onwards for Contract Renewals</description>
    <label>Is30DaySchedule</label>
    <type>Checkbox</type>
</CustomField>