unpackaged/main/default/objects/Contract/fields/Is7DaySchedule__c.field-meta.xml
<CustomField>
    <fullName>Is7DaySchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trigger 7 Day Schedule onwards for Contract Renewal</description>
    <label>Is7DaySchedule</label>
    <type>Checkbox</type>
</CustomField>