unpackaged/main/default/objects/Contract/fields/IsRenewed__c.field-meta.xml
<CustomField>
    <fullName>IsRenewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Renewal Emails will be scheduled and sent if this is not ticked</description>
    <inlineHelpText>To be ticked if this Contract has been renewed</inlineHelpText>
    <label>Contract Renewed?</label>
    <type>Checkbox</type>
</CustomField>