unpackaged/main/default/objects/Contract/fields/IsScheduleRenewal__c.field-meta.xml
<CustomField>
    <fullName>IsScheduleRenewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsScheduleRenewal</label>
    <type>Checkbox</type>
</CustomField>