unpackaged/main/default/objects/Contract/fields/IsScheduleRenewalBanner__c.field-meta.xml
<CustomField>
    <fullName>IsScheduleRenewalBanner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Manually schedule Renewal Banner display</description>
    <label>IsScheduleRenewalBanner</label>
    <type>Checkbox</type>
</CustomField>