unpackaged/main/default/objects/Contract/fields/of_contracts__c.field-meta.xml
<CustomField>
    <fullName>of_contracts__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of contracts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>