unpackaged/main/default/objects/Contract/fields/Quote_is_accepted__c.field-meta.xml
<CustomField>
    <fullName>Quote_is_accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will be checked once the quote has been accepted and will then trigger a field update.</description>
    <label>Quote is accepted</label>
    <type>Checkbox</type>
</CustomField>