unpackaged/main/default/objects/Contract/fields/SAM_Email__c.field-meta.xml
<CustomField>
    <fullName>SAM_Email__c</fullName>
    <formula>Account.Supplier_Account_Manager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAM Email</label>
    <type>Text</type>
</CustomField>