unpackaged/main/default/objects/Contract/fields/SAMEmailTrig__c.field-meta.xml
<CustomField>
    <fullName>SAMEmailTrig__c</fullName>
    <description>Email field for Renewal Templates</description>
    <label>SAMEmailTrig</label>
    <type>Email</type>
</CustomField>