unpackaged/main/default/objects/Contract/fields/SAMFirstName__c.field-meta.xml
<CustomField>
    <fullName>SAMFirstName__c</fullName>
    <formula>Account.Supplier_Account_Manager__r.FirstName</formula>
    <label>SAM First Name</label>
    <type>Text</type>
</CustomField>