unpackaged/main/default/objects/Contract/recordTypes/CreditContract.recordType-meta.xml
<RecordType>
    <fullName>CreditContract</fullName>
    <active>true</active>
    <description>Used for credit based maintenance contracts</description>
    <label>Credit Contract</label>
</RecordType>