unpackaged/main/default/objects/Contract/recordTypes/DaysContract.recordType-meta.xml
<RecordType>
    <fullName>DaysContract</fullName>
    <active>true</active>
    <description>Used for days based maintenance contracts</description>
    <label>Days Contract</label>
</RecordType>