unpackaged/main/default/objects/Contract/recordTypes/enerjyhub_Contracts.recordType-meta.xml
<RecordType>
    <fullName>enerjyhub_Contracts</fullName>
    <active>true</active>
    <description>This record type is used for contracts for EnerjyHUB subscriptions</description>
    <label>enerjyhub Contracts</label>
</RecordType>