unpackaged/main/default/objects/Contract/recordTypes/HoursContract.recordType-meta.xml
<RecordType>
    <fullName>HoursContract</fullName>
    <active>true</active>
    <description>Used for hours based maintenance contracts</description>
    <label>Hours Contract</label>
</RecordType>