unpackaged/main/default/objects/Contract/recordTypes/MaintenanceContract.recordType-meta.xml
<RecordType>
    <fullName>MaintenanceContract</fullName>
    <active>true</active>
    <description>Used for "flat fee" rolling maintenance contracts</description>
    <label>Maintenance Contract</label>
</RecordType>